[package]
name = "cryptolens"
description = "Rust Interface for Cryptolens Web API"
license-file = "LICENSE.md"
homepage = "https://github.com/cryptolens/cryptolens-rust"
documentation = "https://help.cryptolens.io/"
repository = "https://github.com/cryptolens/cryptolens-rust"
version = "0.0.1"
authors = ["Cryptolens AB"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
thiserror = "1"
serde-xml-rs = "0.6"

openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
